Added latests Orders Fields, PSR2 and RESTFull API

--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -25,7 +25,26 @@ demacmedia_erp:
         created.label: 'Imported'
         updated.label: 'Imported'
         imported.label: 'Imported'
-
+        billInformation.label: 'Billing Information'
+        billFirstname.label: 'Billing First Name'
+        billLastname.label: 'Billing Last Name'
+        billCompany.label: 'Billing Company'
+        billAddress1.label: 'Billing Address1'
+        billAddress2.label: 'Billing Address2'
+        billCity.label: 'Billing City'
+        billState.label: 'Billing State'
+        billZip.label: 'Billing Zip'
+        billPhone.label: 'Billing Phone'
+        shipInformation.label: 'Ship Information'
+        shipFirstname.label: 'Ship First Name'
+        shipLastname.label: 'Ship Last Name'
+        shipCompany.label: 'Ship Company'
+        shipAddress1.label: 'Ship Address1'
+        shipAddress2.label: 'Ship Address2'
+        shipCity.label: 'Ship City'
+        shipState.label: 'Ship State'
+        shipZip.label: 'Ship Zip'
+        shipPhone.label: 'Ship Phone'
 
     order_items:
         entity.label: 'WebStore Items'
