--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -12,6 +12,7 @@ demacmedia_erp:
         updatedAt.label: 'Updated at'
         created.label: 'Imported'
         updated.label: 'Imported'
+        accountNumber.label: 'Account Number'
 
     orders:
         entity.label: 'WebStore Order'
@@ -45,6 +46,7 @@ demacmedia_erp:
         shipState.label: 'Ship State'
         shipZip.label: 'Ship Zip'
         shipPhone.label: 'Ship Phone'
+        orderNumber.label: 'Order Number'
 
     order_items:
         entity.label: 'WebStore Items'
@@ -62,3 +64,4 @@ demacmedia_erp:
         created.label: 'Imported'
         updated.label: 'Imported'
         imported.label: 'Imported'
+        orderItemNumber.label: 'Item Number'
