--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -74,6 +74,8 @@ demacmedia_erp:
         updated.label: 'Imported'
         imported.label: 'Imported'
         orderItemNumber.label: 'Item Number'
+        websiteId.label: 'Website ID'
+
 
 demacmedia:
     erp:
