Fix labels for datagrid and erpaccount field

--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -53,6 +53,7 @@ demacmedia_erp:
         shipZip.label: 'Ship Zip'
         shipPhone.label: 'Ship Phone'
         orderNumber.label: 'Order Number'
+        erpaccount.label: 'Web Account'
     oroerporders:
         items.label: 'WebStore Order Items'
 
