Add Carts and CartItems

--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -78,6 +78,62 @@ demacmedia_erp:
         websiteId.label: 'Website ID'
 
 
+    carts:
+        entity.label: 'WebStore Cart'
+        entity_plural.label: 'WebStore Carts'
+        originalCartId.label: 'Original Cart ID'
+        originalEmail.label: 'Original Email'
+        totalPaid.label: 'Total Paid'
+        websiteId.label: 'Website ID'
+        createdAt.label: 'Created at'
+        updatedAt.label: 'Updated at'
+        created.label: 'Imported'
+        updated.label: 'Imported'
+        imported.label: 'Imported'
+        billInformation.label: 'Billing Information'
+        billFirstname.label: 'Billing First Name'
+        billLastname.label: 'Billing Last Name'
+        billCompany.label: 'Billing Company'
+        billAddress1.label: 'Billing Address1'
+        billAddress2.label: 'Billing Address2'
+        billCity.label: 'Billing City'
+        billState.label: 'Billing State'
+        billZip.label: 'Billing Zip'
+        billPhone.label: 'Billing Phone'
+        shipInformation.label: 'Ship Information'
+        shipFirstname.label: 'Ship First Name'
+        shipLastname.label: 'Ship Last Name'
+        shipCompany.label: 'Ship Company'
+        shipAddress1.label: 'Ship Address1'
+        shipAddress2.label: 'Ship Address2'
+        shipCity.label: 'Ship City'
+        shipState.label: 'Ship State'
+        shipZip.label: 'Ship Zip'
+        shipPhone.label: 'Ship Phone'
+        cartNumber.label: 'Cart Number'
+        erpaccount.label: 'Web Account'
+    oroerpcarts:
+        items.label: 'WebStore Cart Items'
+
+
+    cart_items:
+        entity.label: 'WebStore Cart Items'
+        entity_plural.label: 'WebStore Cart Items'
+        oroid.label: 'Oro ID'
+        id.label: 'ID'
+        originalCartItemId.label: 'Cart Item ID'
+        cartId.label: 'Cart ID'
+        sku.label: 'SKU'
+        productName.label: 'Product Name'
+        productPrice.label: 'Product Price'
+        quantity.label: 'Quantity'
+        createdAt.label: 'Created at'
+        updatedAt.label: 'Updated at'
+        created.label: 'Imported'
+        updated.label: 'Imported'
+        imported.label: 'Imported'
+        cartItemNumber.label: 'Item Number'
+        websiteId.label: 'Website ID'
 demacmedia:
     erp:
         oroerpaccounts:
@@ -160,6 +216,62 @@ demacmedia:
 
         oroerporderitems:
             owner.label: 'Owner'
+
+        oroerpcarts:
+            items.label: 'WebStore Cart Items'
+            vendorno.label: 'Vendor No'
+            taxrate.label: 'Tax Rate'
+            tax.label: 'Tax'
+            status.label: 'Status'
+            entity.label: 'WebStore Cart'
+            entity_plural.label: 'WebStore Carts'
+            originalCartId.label: 'Original Cart ID'
+            originalEmail.label: 'Original Email'
+            totalPaid.label: 'Total Paid'
+            websiteId.label: 'Website ID'
+            createdAt.label: 'Created at'
+            updatedAt.label: 'Updated at'
+            created.label: 'Imported'
+            updated.label: 'Imported'
+            imported.label: 'Imported'
+            billinformation.label: 'Billing Information'
+            billfirstname.label: 'Billing First Name'
+            billlastname.label: 'Billing Last Name'
+            billcompany.label: 'Billing Company'
+            billaddress1.label: 'Billing Address1'
+            billaddress2.label: 'Billing Address2'
+            billcity.label: 'Billing City'
+            billstate.label: 'Billing State'
+            billzip.label: 'Billing Zip'
+            billphone.label: 'Billing Phone'
+            shipinformation.label: 'Ship Information'
+            shipfirstname.label: 'Ship First Name'
+            shiplastname.label: 'Ship Last Name'
+            shipcompany.label: 'Ship Company'
+            shipaddress1.label: 'Ship Address1'
+            shipaddress2.label: 'Ship Address2'
+            shipcity.label: 'Ship City'
+            shipstate.label: 'Ship State'
+            shipzip.label: 'Ship Zip'
+            shipphone.label: 'Ship Phone'
+            cartNumber.label: 'Cart Number'
+            shipvia.label: 'Ship Via'
+            shipname.label: 'Ship Name'
+            shipdate.label: 'Ship Date'
+            shipcountry.label: 'Ship Country'
+            shipcontactphone.label: 'Ship Contact Phone'
+            shipcontact.label: 'Ship Contact'
+            shipaddr2.label: 'Ship Address 2'
+            shipaddr1.label: 'Ship Address 1'
+            salesrep.label: 'Sales Representative'
+            refno.label: 'Ref No'
+            ponum.label: 'Ponum'
+            owner.label: 'Owner'
+            original_cart_id.label: 'Original Cart ID'
+
+        oroerpcartitems:
+            owner.label: 'Owner'
+
 oro:
     tracking:
         trackingvisitevent:
