Fix carts integration

--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -83,6 +83,7 @@ demacmedia_erp:
 
 
     carts:
+        cartStatus.label: 'Status'
         entity.label: 'WebStore Cart'
         entity_plural.label: 'WebStore Carts'
         originalCartId.label: 'Original Cart ID'
